src/main/java/com/example/jackpot/shared/error/ResourceNotFoundException.java
package com.example.jackpot.shared.error;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
